Added Contact, Register Form, and pricing page

--- a/College/Views/Shared/_Layout.cshtml
+++ b/College/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <title>ITM College</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-
+    
     <!-- Favicons -->
     <!-- <link href="assets/img/favicon.png" rel="icon"> -->
     <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
@@ -50,12 +50,12 @@
                 <ul>
                     <li><a href="@Url.Action("Index")">HOME</a></li>
                     <li><a href="@Url.Action("About")">COURSES</a></li>
-                    <li><a href="courses.cshtml">ADMISSION</a></li>
-                    <li><a href="trainers.cshtml">DEPARTMENTS</a></li>
-                    <li><a href="events.cshtml">FACULTY</a></li>
-                    <li><a href="pricing.cshtml">FACILITIES</a></li>
-                    <li><a href="pricing.cshtml">STUDENT REGISTRATION</a></li>
-                    <li><a href="pricing.cshtml">CONTACT US</a></li>
+                    <li><a href="@Url.Action("Admission")">ADMISSION</a></li>
+                    <li><a href="#">DEPARTMENTS</a></li>
+                    <li><a href="trainers.cshtml">FACULTY</a></li>
+                    <li><a href="#">FACILITIES</a></li>
+                    <li><a href="@Url.Action("Pricing")">STUDENT REGISTRATION</a></li>
+                    <li><a href="@Url.Action("Contact")">CONTACT US</a></li>
 
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
