--- a/College/Views/User/Admission.cshtml
+++ b/College/Views/User/Admission.cshtml
@@ -1,10 +1,10 @@
-﻿<section id="contact" class="contact">
+﻿<section class="contact">
     <div class="container" data-aos="fade-up">
         <div class="row mt-5 mb-5 justify-content-center">
             <div class="col-lg-8 mt-5 ">
 
                 <h3 class="text-center mt-5 mb-3">Admission Form</h3>
-                <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <form asp-controller="User" asp-action="Admission" method="post">
                     <div class="row">
                         <div class="col-md-6 form-group">
                             <input type="text" class="form-control" name="fullName" placeholder="Full Name" required>
@@ -22,16 +22,14 @@
                     <div class="form-group mt-3">
                         <input type="text" class="form-control" name="address" placeholder="Address" required>
                     </div>
-                    <div class="form-group mt-3">
-                        <select class="form-control" name="gender" required>
-                            <option disabled>Gender</option>
+                    <div class="form-group mt-3 gende-main">
+                        <select class="form-control" name="gender" required >
                             <option value="male">Male</option>
                             <option value="female">Female</option>
                         </select>
                     </div>    
-                    <div class="form-group mt-3">
-                        <select class="form-control" name="subject" required>
-                            <option disabled>Subject</option>
+                    <div class="form-group mt-3 subject-main">
+                        <select class="form-control" name="subject" required >
                             <option value="engineering">Pre Engineering</option>
                             <option value="medical">Pre Medical</option>
                             <option value="ics">ICS</option>
@@ -40,12 +38,7 @@
                         </select>
                     </div>
 
-                    <div class="my-3">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-                    </div>
-                    <div class="text-center"><button type="submit">Register</button></div>
+                    <div class="text-center"><button class="submit-btn" type="submit">Register</button></div>
                 </form>
                 
             </div>
