--- a/College/wwwroot/assets/css/style.css
+++ b/College/wwwroot/assets/css/style.css
@@ -1313,29 +1313,12 @@ section {
   color: #fff;
 }
 
-.contact .php-email-form {
-  width: 100%;
-  background: #fff;
-}
 
-.contact .php-email-form .form-group {
-  padding-bottom: 8px;
-}
-
-.contact .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .error-message br+br {
+.contact  .error-message br+br {
   margin-top: 25px;
 }
 
-.contact .php-email-form .sent-message {
+.contact  .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -1344,14 +1327,14 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .loading {
+.contact  .loading {
   display: none;
   background: #fff;
   text-align: center;
   padding: 15px;
 }
 
-.contact .php-email-form .loading:before {
+.contact  .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -1363,37 +1346,39 @@ section {
   animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form input,
-.contact .php-email-form textarea {
+.contact input,
+.contact textarea {
   border-radius: 4px;
   box-shadow: none;
   font-size: 14px;
 }
 
-.contact .php-email-form input:focus,
-.contact .php-email-form textarea:focus {
+.contact input:focus,
+.contact textarea:focus {
   border-color: #5fcf80;
 }
 
-.contact .php-email-form input {
+
+.contact input {
   height: 44px;
 }
 
-.contact .php-email-form textarea {
+.contact textarea {
   padding: 10px 12px;
 }
 
-.contact .php-email-form button[type=submit] {
-  background: #5fcf80;
-  border: 0;
-  padding: 10px 35px;
-  color: #fff;
-  transition: 0.4s;
-  border-radius: 50px;
+.contact .submit-btn {
+    margin: 20px 0;
+    background: #5fcf80;
+    border: 0;
+    padding: 10px 35px;
+    color: #fff;
+    transition: 0.4s;
+    border-radius: 50px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
-  background: #3ac162;
+.contact .php-email-form .submit-btn:hover {
+    background: #3ac162;
 }
 
 @keyframes animate-loading {
@@ -1568,4 +1553,37 @@ section {
   background: #3ac162;
   color: #fff;
   text-decoration: none;
+}
+
+/* ----------- Contact page ----------- */
+.form-group.mt-3.gende-main::after {
+    content: '';
+    position: absolute;
+    background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmnT3Bv9K7IFwM6RMKQEwgMrJfeL3w9oKG4GyuHU5KZg&s);
+    background-size: cover;
+    width: 20px;
+    height: 15px;
+    background-repeat: no-repeat;
+    right: 10px;
+    top: 41%;
+    transform: translateY(-50%);
+}
+.form-group.mt-3.gende-main {
+    position: relative;
+}
+
+.form-group.mt-3.subject-main::after {
+    content: '';
+    position: absolute;
+    background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmnT3Bv9K7IFwM6RMKQEwgMrJfeL3w9oKG4GyuHU5KZg&s);
+    background-size: cover;
+    width: 20px;
+    height: 15px;
+    background-repeat: no-repeat;
+    right: 10px;
+    top: 41%;
+    transform: translateY(-50%);
+}
+.form-group.mt-3.subject-main {
+    position: relative;
 }
