admin login with session

--- a/College/Views/Admin/Dashboard.cshtml
+++ b/College/Views/Admin/Dashboard.cshtml
@@ -2,3 +2,55 @@
     Layout = "~/Views/Shared/_adminLayout.cshtml";
 }
 
+<div class="col-md-3 grid-margin stretch-card">
+    <div class="card">
+        <a href="orders.html">
+            <div class="card-body">
+                <p class="card-title text-md-center text-xl-left">Orders</p>
+                <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
+                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">302</h3>
+                    <i class="ti-shopping-cart icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+<div class="col-md-3 grid-margin stretch-card">
+    <div class="card">
+        <a href="events.html">
+            <div class="card-body">
+                <p class="card-title text-md-center text-xl-left">Events</p>
+                <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
+                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">43</h3>
+                    <i class="ti-calendar icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+<div class="col-md-3 grid-margin stretch-card">
+    <div class="card">
+        <a href="">
+            <div class="card-body">
+                <p class="card-title text-md-center text-xl-left">Feedback</p>
+                <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
+                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">23</h3>
+                    <i class="ti-comment-alt icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+<div class="col-md-3 grid-margin stretch-card">
+    <div class="card">
+        <a href="matches.html">
+            <div class="card-body">
+                <p class="card-title text-md-center text-xl-left">Matches</p>
+                <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
+                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">10</h3>
+                    <i class="ti-cup icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
