--- a/College/Views/Admin/login.cshtml
+++ b/College/Views/Admin/login.cshtml
@@ -16,7 +16,7 @@
     <div class="col-lg-3" style=" padding: 0px 20px 30px 20px" data-aos="fade-up" data-aos-duration="700">
 
         <h3 class="text-center mt-5 mb-3">Admin Login</h3>
-        <form asp-controller="Admin" asp-action="CheckLogin" method="post">
+        <form asp-controller="Admin" asp-action="CheckLogin" method="POST">
             <div class="form-group mt-2">
                 <input type="email" class="form-control" name="email" placeholder="Email" required>
             </div>
