--- a/College/Views/Shared/_emptyLayout.cshtml
+++ b/College/Views/Shared/_emptyLayout.cshtml
@@ -7,44 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Admin | Edit Player</title>
     <!-- plugins:css -->
-    <link rel="stylesheet" href="vendors/ti-icons/css/themify-icons.css">
-    <link rel="stylesheet" href="vendors/base/vendor.bundle.base.css">
+    <link rel="stylesheet" href="@Url.Content("~/vendors/ti-icons/css/themify-icons.css")">
+    <link rel="stylesheet" href="@Url.Content("~/vendors/base/vendor.bundle.base.css")">
     <!-- endinject -->
     <!-- plugin css for this page -->
     <!-- End plugin css for this page -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="@Url.Content("~/css/style.css")">
     <!-- endinject -->
-    <link rel="shortcut icon" href="images/favicon.png" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    
+    <link rel="shortcut icon" href="@Url.Content("~/images/favicon.png")" />
 </head>
-
 <body>
 
     @RenderBody();
    
 
     <!-- plugins:js -->
-    <script src="vendors/base/vendor.bundle.base.js"></script>
+    <script src="@Url.Content("~/vendors/base/vendor.bundle.base.js")"></script>
     <!-- endinject -->
     <!-- Plugin js for this page-->
-    <script src="vendors/chart.js/Chart.min.js"></script>
-    <script src="js/jquery.cookie.js" type="text/javascript"></script>
+    <script src="@Url.Content("~/vendors/chart.js/Chart.min.js")"></script>
+    <script src="@Url.Content("~/js/jquery.cookie.js")" type="text/javascript"></script>
     <!-- End plugin js for this page-->
     <!-- inject:js -->
-    <script src="js/off-canvas.js"></script>
-    <script src="js/hoverable-collapse.js"></script>
-    <script src="js/template.js"></script>
-    <script src="js/todolist.js"></script>
+    <script src="@Url.Content("~/js/off-canvas.js")"></script>
+    <script src="@Url.Content("~/js/hoverable-collapse.js")"></script>
+    <script src="@Url.Content("~/js/template.js")"></script>
+    <script src="@Url.Content("~/js/todolist.js")"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
-    <script src="js/dashboard.js"></script>
+    <script src="@Url.Content("~/js/dashboard.js")"></script>
     <!-- End custom js for this page-->
-    <script>
-        AOS.init();
-    </script>
 </body>
+
 </html>
