Setup Admin Dashbaord

--- a/College/Views/Admin/Dashboard.cshtml
+++ b/College/Views/Admin/Dashboard.cshtml
@@ -1,33 +1,38 @@
 ﻿@{
     Layout = "~/Views/Shared/_adminLayout.cshtml";
+
 }
+
+<div class="col-md-3 grid-margin stretch-card">
+    <div class="card">
+        <a href="events.html">
+            <div class="card-body">
+                <p class="card-title text-md-center text-xl-left">Registrations</p>
+                <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
+                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">43</h3>
+                    <i class="fa fa-file-lines icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
 
 <div class="col-md-3 grid-margin stretch-card">
     <div class="card">
         <a href="orders.html">
             <div class="card-body">
-                <p class="card-title text-md-center text-xl-left">Orders</p>
+                <p class="card-title text-md-center text-xl-left">Students</p>
                 <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
                     <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">302</h3>
-                    <i class="ti-shopping-cart icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
+                    <i class="fa fa-user icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
                 </div>
             </div>
         </a>
     </div>
 </div>
-<div class="col-md-3 grid-margin stretch-card">
-    <div class="card">
-        <a href="events.html">
-            <div class="card-body">
-                <p class="card-title text-md-center text-xl-left">Events</p>
-                <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
-                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">43</h3>
-                    <i class="ti-calendar icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
-                </div>
-            </div>
-        </a>
-    </div>
-</div>
+
+
+
 <div class="col-md-3 grid-margin stretch-card">
     <div class="card">
         <a href="">
@@ -45,10 +50,10 @@
     <div class="card">
         <a href="matches.html">
             <div class="card-body">
-                <p class="card-title text-md-center text-xl-left">Matches</p>
+                <p class="card-title text-md-center text-xl-left">Courses</p>
                 <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
                     <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">10</h3>
-                    <i class="ti-cup icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
+                    <i class="fa fa-book icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
                 </div>
             </div>
         </a>
