--- a/College/Views/Shared/_adminLayout.cshtml
+++ b/College/Views/Shared/_adminLayout.cshtml
@@ -15,42 +15,40 @@
     <link rel="stylesheet" href="@Url.Content("~/css/style.css")">
     <!-- endinject -->
     <link rel="shortcut icon" href="@Url.Content("~/images/favicon.png")" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <style>
         .card a {
             text-decoration: none;
             color: black;
         }
+        ul li a {
+            text-decoration: none;
+            color: black;
+        }
     </style>
 </head>
-<body>
-    
-    
-    
+<body> 
+ 
     <div class="container-scroller">
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <h4 style="margin-bottom: 0px;">Admin Name</h4>
+        <h4 style="margin-bottom: 0px;">
+            @foreach (var a in Model)
+            {
+                @a.name
+            }
+        </h4>
+
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
         <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
           <span class="ti-view-list"></span>
         </button>
-        <ul class="navbar-nav mr-lg-2">
-          <li class="nav-item nav-search d-none d-lg-block">
-            <div class="input-group">
-              <div class="input-group-prepend hover-cursor" id="navbar-search-icon">
-                <span class="input-group-text" id="search">
-                  <i class="ti-search"></i>
-                </span>
-              </div>
-              <input type="text" class="form-control" id="navbar-search-input" placeholder="Search now" aria-label="search" aria-describedby="search">
-            </div>
-          </li>
-        </ul>
+        
         <ul class="navbar-nav navbar-nav-right">
           <li class="nav-item dropdown me-1">
-            <button type="button" class="btn btn-dark">LOGOUT</button>
+            <a type="button" href="@Url.Action("Logout", "Admin")" class="btn btn-dark">LOGOUT</a>
           </li>
         </ul>
         <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
@@ -64,33 +62,39 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="@Url.Action("Dashboard", "Admin")">
+            <a class="nav-link" href="@Url.Action("Dashboard")">
               <i class="ti-shield menu-icon"></i>
               <span class="menu-title">Dashboard</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="orders.html">
-              <i class="ti-shopping-cart menu-icon"></i>
-              <span class="menu-title">Orders</span>
+              <i class="fa fa-user menu-icon"></i>
+              <span class="menu-title">Students</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="events.html">
-              <i class="ti-calendar menu-icon"></i>
-              <span class="menu-title">Events</span>
+              <i class="fa fa-chalkboard-user menu-icon"></i>
+              <span class="menu-title">Teachers</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="matches.html">
-              <i class="ti-cup menu-icon"></i>
-              <span class="menu-title">Matches</span>
+              <i class="fa fa-book menu-icon"></i>
+              <span class="menu-title">Courses</span>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="players.html">
-              <i class="ti-cup menu-icon"></i>
-              <span class="menu-title">Players</span>
+              <i class="fa fa-circle-user menu-icon"></i>
+              <span class="menu-title">Profile</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="players.html">
+              <i class="fa fa-users menu-icon"></i>
+              <span class="menu-title">Admins</span>
             </a>
           </li>
         </ul>
