--- a/College/Views/Admin/Dashboard.cshtml
+++ b/College/Views/Admin/Dashboard.cshtml
@@ -2,7 +2,7 @@
     Layout = "~/Views/Shared/_adminLayout.cshtml";
 
 }
-
+<h4 class="my-3">Dashboard</h4>
 <div class="col-md-3 grid-margin stretch-card">
     <div class="card">
         <a href="events.html">
