--- a/College/Views/Admin/login.cshtml
+++ b/College/Views/Admin/login.cshtml
@@ -17,6 +17,9 @@
 
         <h3 class="text-center mt-5 mb-3">Admin Login</h3>
         <form asp-controller="Admin" asp-action="CheckLogin" method="POST">
+            <div class="alert alert-danger" style="display: @(ViewBag.ErrorMessage == null ? "none" : "") ;" role="alert">
+                @ViewBag.ErrorMessage
+            </div>
             <div class="form-group mt-2">
                 <input type="email" class="form-control" name="email" placeholder="Email" required>
             </div>
