--- a/College/Views/User/Admission.cshtml
+++ b/College/Views/User/Admission.cshtml
@@ -17,6 +17,9 @@
                         <input type="email" class="form-control" name="email" placeholder="Email" required>
                     </div>
                     <div class="form-group mt-3">
+                        <input type="password" class="form-control" name="password" placeholder="Password" required>
+                    </div>
+                    <div class="form-group mt-3">
                         <input type="date" class="form-control" name="dob" placeholder="Date Of Birth" required>
                     </div>
                     <div class="form-group mt-3">
