--- a/College/Views/User/Index.cshtml
+++ b/College/Views/User/Index.cshtml
@@ -16,7 +16,7 @@
 
             <div class="row">
                 <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-                    <img src="assets/img/about.jpg" class="img-fluid" alt="">
+                    <img src="~/assets/img/about.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
                     <h3>About ITM College</h3>
@@ -126,7 +126,7 @@
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                     <div class="course-item">
-                        <img src="assets/img/course-1.jpg" class="img-fluid" alt="...">
+                        <img src="~/assets/img/course-1.jpg" class="img-fluid" alt="...">
                         <div class="course-content">
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <h4>Web Development</h4>
@@ -137,7 +137,7 @@
                             <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
                             <div class="trainer d-flex justify-content-between align-items-center">
                                 <div class="trainer-profile d-flex align-items-center">
-                                    <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
+                                    <img src="~/assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
                                     <span>Antonio</span>
                                 </div>
                                 <div class="trainer-rank d-flex align-items-center">
@@ -152,7 +152,7 @@
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
                     <div class="course-item">
-                        <img src="assets/img/course-2.jpg" class="img-fluid" alt="...">
+                        <img src="~/assets/img/course-2.jpg" class="img-fluid" alt="...">
                         <div class="course-content">
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <h4>Marketing</h4>
@@ -163,7 +163,7 @@
                             <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
                             <div class="trainer d-flex justify-content-between align-items-center">
                                 <div class="trainer-profile d-flex align-items-center">
-                                    <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
+                                    <img src="~/assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
                                     <span>Lana</span>
                                 </div>
                                 <div class="trainer-rank d-flex align-items-center">
@@ -178,7 +178,7 @@
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="course-item">
-                        <img src="assets/img/course-3.jpg" class="img-fluid" alt="...">
+                        <img src="~/assets/img/course-3.jpg" class="img-fluid" alt="...">
                         <div class="course-content">
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <h4>Content</h4>
@@ -189,7 +189,7 @@
                             <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
                             <div class="trainer d-flex justify-content-between align-items-center">
                                 <div class="trainer-profile d-flex align-items-center">
-                                    <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
+                                    <img src="~/assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
                                     <span>Brandon</span>
                                 </div>
                                 <div class="trainer-rank d-flex align-items-center">
@@ -213,7 +213,7 @@
             <div class="row" data-aos="zoom-in" data-aos-delay="100">
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                     <div class="member">
-                        <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
+                        <img src="~/assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
                         <div class="member-content">
                             <h4>Walter White</h4>
                             <span>Web Development</span>
@@ -232,7 +232,7 @@
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                     <div class="member">
-                        <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
+                        <img src="~/assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
                         <div class="member-content">
                             <h4>Sarah Jhinson</h4>
                             <span>Marketing</span>
@@ -251,7 +251,7 @@
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                     <div class="member">
-                        <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
+                        <img src="~/assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
                         <div class="member-content">
                             <h4>William Anderson</h4>
                             <span>Content</span>
