--- a/College/Views/Shared/_adminLayout.cshtml
+++ b/College/Views/Shared/_adminLayout.cshtml
@@ -90,7 +90,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="players.html">
+            <a class="nav-link" href="@Url.Action("AdminProfile", "Admin")">
               <i class="fa fa-circle-user menu-icon"></i>
               <span class="menu-title">Profile</span>
             </a>
