Admins and Students

--- a/College/Views/Admin/AdminProfile.cshtml
+++ b/College/Views/Admin/AdminProfile.cshtml
@@ -19,7 +19,7 @@
             <h4 class="text-center mt-3">@data.email</h4>
             <form asp-controller="Admin" asp-action="UpdateEmail" method="post" class="w-50 m-auto">
                 <div class="form-group mt-3">
-                    <input type="text" class="form-control" name="email" placeholder="Update Email" required>
+                    <input type="email" class="form-control" name="email" placeholder="Update Email" required>
                     <button type="submit" class="btn btn-dark form-control mt-2">Update</button>
                 </div>
             </form>
