--- a/College/Views/Shared/_adminLayout.cshtml
+++ b/College/Views/Shared/_adminLayout.cshtml
@@ -66,7 +66,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="orders.html">
+            <a class="nav-link" href="@Url.Action("Students", "Admin")">
               <i class="fa fa-user menu-icon"></i>
               <span class="menu-title">Students</span>
             </a>
@@ -96,7 +96,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="players.html">
+            <a class="nav-link" href="@Url.Action("Admins", "Admin")">
               <i class="fa fa-users menu-icon"></i>
               <span class="menu-title">Admins</span>
             </a>
