--- a/College/Views/Shared/_adminLayout.cshtml
+++ b/College/Views/Shared/_adminLayout.cshtml
@@ -78,6 +78,12 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="@Url.Action("Feedback", "Admin")">
+              <i class="ti-comment-alt menu-icon"></i>
+              <span class="menu-title">Feedback</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="events.html">
               <i class="fa fa-chalkboard-user menu-icon"></i>
               <span class="menu-title">Teachers</span>
