Add show courses

--- a/College/Views/Admin/Dashboard.cshtml
+++ b/College/Views/Admin/Dashboard.cshtml
@@ -19,7 +19,7 @@
 
 <div class="col-md-3 grid-margin stretch-card">
     <div class="card">
-        <a href="orders.html">
+        <a href="href=" @Url.Action("Students", "Admin")"">
             <div class="card-body">
                 <p class="card-title text-md-center text-xl-left">Students</p>
                 <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
@@ -39,7 +39,7 @@
             <div class="card-body">
                 <p class="card-title text-md-center text-xl-left">Feedback</p>
                 <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
-                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">23</h3>
+                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">@ViewBag.feed</h3>
                     <i class="ti-comment-alt icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
                 </div>
             </div>
@@ -48,11 +48,11 @@
 </div>
 <div class="col-md-3 grid-margin stretch-card">
     <div class="card">
-        <a href="matches.html">
+        <a href="@Url.Action("Courses", "Admin")">
             <div class="card-body">
                 <p class="card-title text-md-center text-xl-left">Courses</p>
                 <div class="d-flex flex-wrap justify-content-between justify-content-md-center justify-content-xl-between align-items-center">
-                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">10</h3>
+                    <h3 class="mb-0 mb-md-2 mb-xl-0 order-md-1 order-xl-0">@ViewBag.courses</h3>
                     <i class="fa fa-book icon-md text-muted mb-0 mb-md-3 mb-xl-0"></i>
                 </div>
             </div>
