--- a/College/Views/Shared/_Layout.cshtml
+++ b/College/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li><a href="@Url.Action("Index")">HOME</a></li>
-                    <li><a href="@Url.Action("About")">COURSES</a></li>
+                    <li><a href="@Url.Action("Courses", "User")">COURSES</a></li>
                     @if (ViewBag.StudentName != null)
                     {
                         
@@ -59,9 +59,7 @@
                         <li><a href="@Url.Action("Admission")">ADMISSION</a></li>
                     }
                     
-                    <li><a href="#">DEPARTMENTS</a></li>
-                    <li><a href="trainers.cshtml">FACULTY</a></li>
-                    <li><a href="#">FACILITIES</a></li>
+                    <li><a href="trainers.cshtml">TRAINERS</a></li>
                     <li><a href="@Url.Action("Contact")">CONTACT US</a></li>
                     
                     @if (ViewBag.StudentName != null)
