--- a/College/Views/Shared/_adminLayout.cshtml
+++ b/College/Views/Shared/_adminLayout.cshtml
@@ -35,7 +35,9 @@
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
         <h4 style="margin-bottom: 0px;">
-            @ViewBag.adminName
+            <a style="text-decoration: none; color: black;" href="@Url.Action("Dashboard", "Admin")">
+                @ViewBag.adminName
+            </a>
         </h4>
 
       </div>
@@ -90,7 +92,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="matches.html">
+            <a class="nav-link" href="@Url.Action("Courses", "Admin")">
               <i class="fa fa-book menu-icon"></i>
               <span class="menu-title">Courses</span>
             </a>
