--- a/College/Views/User/Index.cshtml
+++ b/College/Views/User/Index.cshtml
@@ -1,10 +1,9 @@
-﻿
-<!-- ======= Hero Section ======= -->
+﻿<!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex justify-content-center align-items-center">
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
         <h1>Learning Today,<br>Leading Tomorrow</h1>
         <h2>ITM College offers cutting-edge education and empowers students<br> to excel in the dynamic world of Information Technology and Management.</h2>
-        <a href="courses.html" class="btn-get-started">Get Started</a>
+        <a href="@Url.Action("Admission", "User")" class="btn-get-started">Get Started</a>
     </div>
 </section><!-- End Hero -->
 
@@ -46,12 +45,12 @@
             <div class="row counters">
 
                 <div class="col-lg-4 col-6 text-center">
-                    <span data-purecounter-start="0" data-purecounter-end="1232" data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="@ViewBag.std" data-purecounter-duration="1" class="purecounter"></span>
                     <p>Students</p>
                 </div>
 
                 <div class="col-lg-4 col-6 text-center">
-                    <span data-purecounter-start="0" data-purecounter-end="64" data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="@ViewBag.courses" data-purecounter-duration="1" class="purecounter"></span>
                     <p>Courses</p>
                 </div>
 
@@ -123,84 +122,26 @@
             </div>
 
             <div class="row" data-aos="zoom-in" data-aos-delay="100">
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="course-item">
-                        <img src="~/assets/img/course-1.jpg" class="img-fluid" alt="...">
-                        <div class="course-content">
-                            <div class="d-flex justify-content-between align-items-center mb-3">
-                                <h4>Web Development</h4>
-                                <p class="price">$169</p>
-                            </div>
-
-                            <h3><a href="course-details.html">Website Design</a></h3>
-                            <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
-                            <div class="trainer d-flex justify-content-between align-items-center">
-                                <div class="trainer-profile d-flex align-items-center">
-                                    <img src="~/assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
-                                    <span>Antonio</span>
+                
+                @foreach (var a in ViewBag.data)
+                {
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                        <div class="course-item">
+                            <img src="~/uploads/@a.imagePath" class="img-fluid" alt="...">
+                            <div class="course-content">
+                                <div class="d-flex justify-content-between align-items-center mb-3">
+                                    <h4>@a.duration</h4>
+                                    <p class="price">$@a.price</p>
                                 </div>
-                                <div class="trainer-rank d-flex align-items-center">
-                                    <i class="bx bx-user"></i>&nbsp;50
-                                    &nbsp;&nbsp;
-                                    <i class="bx bx-heart"></i>&nbsp;65
-                                </div>
+
+                                <h3><a href="course-details.html">@a.title</a></h3>
+                                <p>@a.description</p>
                             </div>
                         </div>
                     </div>
-                </div> <!-- End Course Item-->
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-                    <div class="course-item">
-                        <img src="~/assets/img/course-2.jpg" class="img-fluid" alt="...">
-                        <div class="course-content">
-                            <div class="d-flex justify-content-between align-items-center mb-3">
-                                <h4>Marketing</h4>
-                                <p class="price">$250</p>
-                            </div>
-
-                            <h3><a href="course-details.html">Search Engine Optimization</a></h3>
-                            <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
-                            <div class="trainer d-flex justify-content-between align-items-center">
-                                <div class="trainer-profile d-flex align-items-center">
-                                    <img src="~/assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
-                                    <span>Lana</span>
-                                </div>
-                                <div class="trainer-rank d-flex align-items-center">
-                                    <i class="bx bx-user"></i>&nbsp;35
-                                    &nbsp;&nbsp;
-                                    <i class="bx bx-heart"></i>&nbsp;42
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> <!-- End Course Item-->
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-                    <div class="course-item">
-                        <img src="~/assets/img/course-3.jpg" class="img-fluid" alt="...">
-                        <div class="course-content">
-                            <div class="d-flex justify-content-between align-items-center mb-3">
-                                <h4>Content</h4>
-                                <p class="price">$180</p>
-                            </div>
-
-                            <h3><a href="course-details.html">Copywriting</a></h3>
-                            <p>Et architecto provident deleniti facere repellat nobis iste. Id facere quia quae dolores dolorem tempore.</p>
-                            <div class="trainer d-flex justify-content-between align-items-center">
-                                <div class="trainer-profile d-flex align-items-center">
-                                    <img src="~/assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
-                                    <span>Brandon</span>
-                                </div>
-                                <div class="trainer-rank d-flex align-items-center">
-                                    <i class="bx bx-user"></i>&nbsp;20
-                                    &nbsp;&nbsp;
-                                    <i class="bx bx-heart"></i>&nbsp;85
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> <!-- End Course Item-->
+                }
+                
+                <!-- End Course Item-->
 
             </div>
 
